# goit-pyweb-django-hw

./: pyproject.toml
quotes_app/: db.sqlite3
quotes_app/quotes/: forms.py  models.py  urls.py  utils.py  views.py
quotes_app/quotes/migrations/: 0001_initial.py
quotes_app/quotes/static/quotes/: style.css
quotes_app/quotes/templates/quotes/: author.html  author_input.html  base.html  index.html  quote_input.html  tag.html  tag_input.html
quotes_app/quotes/templatetags/: extract.py
quotes_app/quotes_app/: asgi.py  settings.py  urls.py  utils.py  wsgi.py
quotes_app/users/: forms.py  urls.py  views.py
quotes_app/users/templates/users/: login.html  signup.html
quotes_app/utils/: authors.json  migration.py  quotes.json
